--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.1.1",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.3",
-    "@mui/x-data-grid": "^6.18.6",
+    "@mui/material": "^5.13.5",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.11",
+    "@mui/x-data-grid": "^6.8.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "cors": "^2.8.5",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
-    "react-redux": "^9.0.4",
-    "react-router-dom": "^6.21.1"
+    "react-hook-form": "^7.45.0",
+    "react-redux": "^9.0.0",
+    "react-router-dom": "^6.21.1",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -31,9 +36,9 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11"
   }
 }
